week-3/day-10/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kibana
  annotations:
    annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.nagcloudlab.com
      secretName: tls-secret
  rules:
    - host: kibana.nagcloudlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-kibana-kibana
                port:
                  number: 5601
